# CPPNeuralNetwork

./: CMakeLists.txt  README.md  main.cpp
matrix/: Matrix.cpp  Matrix.h
network/: ActivationFunctionSchema.h  Activations.h  Layer.cpp  Layer.h  MapAble.h  NeuralNetwork.cpp  NeuralNetwork.h
